[package]
name = "sbb"
version = "0.1.0"
authors = ["Marcelli Luca <luca.marcelli@infoguard.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["macros"] }
serde_json = { version = "1.0" }
clap = { version = "2.33.3" }
chrono = { version = "0.4.19" }
prettytable-rs = { version = "0.8" }